stretch goal - made minor fix - done

--- a/css/index.css
+++ b/css/index.css
@@ -162,7 +162,11 @@ table {
   height: 100px;
   margin-bottom: 20px;
   display: flex;
-  flex-direction: column-reverse;
+}
+@media (max-width: 400px) {
+  .container header {
+    flex-direction: column-reverse;
+  }
 }
 .container header nav {
   width: 100%;
